# scicomp

./: .editorconfig  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  FINAL_DEPLOYMENT_REPORT.md  LESSONS.md  README.md  SECURITY.md  SSOT.md  pyproject.toml  requirements-dev.txt  requirements.txt  service-metadata.yaml  setup.py
.claude/: AGENTS.md  CLAUDE.md  settings.json
.cursor/: rules.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  codeql.yml  docs-doctrine.yml  drift.yml  scicomp-ci.yml
MATLAB/Control/: README.md
MATLAB/Crystallography/: README.md
MATLAB/Elasticity/: README.md
MATLAB/FEM/: README.md
MATLAB/Linear_Algebra/: README.md
MATLAB/Machine_Learning/: README.md
MATLAB/Monte_Carlo/: README.md
MATLAB/Multiphysics/: README.md
MATLAB/ODE_PDE/: README.md
MATLAB/Optics/: README.md
MATLAB/Optimization/: README.md
MATLAB/Plotting/: README.md
MATLAB/Quantum/: README.md
MATLAB/QuantumOptics/: README.md
MATLAB/Quantum_Materials/: README.md
MATLAB/Signal_Processing/: README.md
MATLAB/Spintronics/: README.md
MATLAB/Stochastic/: README.md
MATLAB/Symbolic_Algebra/: README.md
MATLAB/Thermal_Transport/: README.md
Mathematica/Control/: README.md
Mathematica/Crystallography/: README.md
Mathematica/Elasticity/: README.md
Mathematica/FEM/: README.md
Mathematica/Linear_Algebra/: README.md
Mathematica/Machine_Learning/: README.md
Mathematica/Monte_Carlo/: README.md
Mathematica/Multiphysics/: README.md
Mathematica/ODE_PDE/: README.md
Mathematica/Optics/: README.md
Mathematica/Optimization/: README.md
Mathematica/Plotting/: README.md
Mathematica/Quantum/: README.md
Mathematica/QuantumOptics/: README.md
Mathematica/Quantum_Materials/: README.md
Mathematica/Signal_Processing/: README.md
Mathematica/Spintronics/: README.md
Mathematica/Stochastic/: README.md
Mathematica/Symbolic_Algebra/: README.md
Mathematica/Thermal_Transport/: README.md
Python/Control/: README.md
Python/Crystallography/: README.md
Python/Elasticity/: README.md
Python/FEM/: README.md
Python/Linear_Algebra/: README.md
Python/Machine_Learning/: README.md
Python/Monte_Carlo/: README.md
Python/Multiphysics/: README.md
Python/ODE_PDE/: README.md
Python/Optics/: README.md
Python/Optimization/: README.md
Python/Plotting/: README.md
Python/Quantum/: README.md
Python/Quantum/core/: quantum_operators.py
Python/QuantumOptics/: README.md
Python/Signal_Processing/: README.md  signal_analysis.py
Python/Spintronics/: README.md
Python/Stochastic/: README.md  stochastic_processes.py
Python/Symbolic_Algebra/: README.md
Python/Thermal_Transport/: README.md
Python/quantum_physics/: __init__.py
Python/quantum_physics/electronic_structure/: __init__.py  density_of_states.py
Python/quantum_physics/many_body/: __init__.py
Python/quantum_physics/quantum_dynamics/: __init__.py  harmonic_oscillator.py
Python/utils/: __init__.py  parallel.py
Python/visualization/: berkeley_style.py
docs/: API_REFERENCE.md  GPU_TESTING_GUIDE.md  INDEX.md  INSTALLATION_GUIDE.md  README.md  architecture.md  deployment.md  design_specifications.md  examples.md  troubleshooting.md  tutorial.md  usage.md
docs/api/: README.md  adaptive_methods.md  advanced_analytics.md  assembly.md  beam_theory.md  berkeley_style.md  boundary_conditions.md  cavity_qed.md  cli.md  cloud_integration.md  constants.md  constrained.md  continuum_mechanics.md  coupling.md  crystal_structure.md  cuda_kernels.md  diffraction.md  electromagnetic.md  file_io.md  finite_element.md  finite_elements.md  fluid_structure.md  fourier_transforms.md  genetic_algorithms.md  global_optimization.md  heat_conduction.md  heat_equation.md  integration.md  linear_programming.md  linear_systems.md  llg_dynamics.md  matrix_operations.md  mesh_generation.md  multi_objective.md  neural_networks.md  nonlinear_solvers.md  ode_solvers.md  optical_materials.md  optimal_control.md  optimization.md  (+41 more)
docs/operations/: SYNC.md
docs/theory/: computational_methods.md  engineering_applications.md  ml_physics_theory.md  quantum_mechanics_theory.md
scripts/: github-sync-report.mjs
tests/: test_signal_processing.py
tests/python/: conftest.py  test_crystal_structure.py  test_fem_assembly.py  test_fourier_transforms.py  test_gpu_fallback.py  test_harmonic_oscillator.py  test_ml_physics.py  test_optimal_control.py  test_quantum_algorithms.py  test_quantum_computing.py  test_quantum_operators.py  test_quantum_physics.py  test_quantum_states.py  test_robust_control.py  test_thermal_transport.py  test_utils.py
